[package]
name = "hsr-alert-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.32", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.10.3"
reqwest = "0.11.23"
scraper = "0.18.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serenity = "0.12.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "tracing", "sync", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[target.'cfg(target_arch = "arm-unknown-linux-gnueabihf")'.dependencies]
openssl-sys = { version = "0.9.99", features = ["vendored"] }