[package]
name = "hsr-alert-bot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.32", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serenity = "0.12.0"
shuttle-runtime = "0.39.0"
shuttle-secrets = "0.39.0"
shuttle-serenity = "0.39.0"
soup = "0.5.1"
tokio = { version = "1.35.1", features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
